# orion

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  contracts.yml  security.yml
models/cost_prediction/: cost_prediction_model.pkl  cost_prediction_model_metadata.json  cost_prediction_model_scaler.pkl
models/route_optimization/: route_optimization_model_metadata.json  route_optimization_model_scaler.pkl
src/orion/: __init__.py  api.py  ce.py  explain.py  ml_enhanced_optimizer.py  optimize.py
src/orion/mcp/: __init__.py  manifest.json  server.py
src/orion/ml/: __init__.py  cost_prediction.py  route_optimization.py  train_models.py
tests/: __init__.py  test_ce_orion_explanation.py  test_explain_payload.py  test_health.py  test_mcp_smoke.py  test_optimize_scores.py
